--- a/book/labs/lab_01.ipynb
+++ b/book/labs/lab_01.ipynb
@@ -29,9 +29,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ea5c50496e9c4ed6a454b310bc8e5a44",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[20, 0], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_text…"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import leafmap\n",
     "\n",
@@ -40,7 +56,7 @@
     "# Add basemap\n",
     "m.add_basemap(\"CartoDB.DarkMatter\")\n",
     "# Add text to the map\n",
-    "text = \"Made by Your Name\"\n",
+    "text = \"Made by Camilo Jose Viera Iglesias\"\n",
     "m.add_text(text, fontsize=20, position='bottomright')\n",
     "# Add a logo to the map\n",
     "logo = 'https://i.imgur.com/at4Qprk.png'\n",
@@ -77,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
