--- a/book/labs/lab_01.ipynb
+++ b/book/labs/lab_01.ipynb
@@ -2,7 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "6405bfd4",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# Lab 1\n",
     "\n",
@@ -29,13 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
+   "id": "c01bb8db-ab23-4cc8-a128-8edb48bae49d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9338cd45a2d04ae1a0190e575a3f0ea2",
+       "model_id": "369a92444a394ca0b5558d550356d57c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -43,7 +51,7 @@
        "Map(center=[20, 0], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_text…"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,8 +67,8 @@
     "text = \"Made by Camilo Jose Viera Iglesias\"\n",
     "m.add_text(text, fontsize=20, position='bottomright')\n",
     "# Add a logo to the map\n",
-    "logo = 'https://i.imgur.com/at4Qprk.png'\n",
-    "m.add_image(logo, position='bottomright')\n",
+    "logo = 'https://raw.githubusercontent.com/opengeos/leafmap/master/docs/assets/logo_rect.png'\n",
+    "m.add_image(logo, position='bottomright', width=200)\n",
     "# Add GeoJSON data to the map\n",
     "cables = 'https://open.gishub.org/data/vector/cables.geojson'\n",
     "callback = lambda feat: {\"color\": feat[\"properties\"][\"color\"], \"weight\": 1}\n",
@@ -71,6 +79,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "877426d1",
    "metadata": {},
    "source": [
     "![](https://i.imgur.com/ZfZCdhL.png)"
@@ -79,7 +88,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
