--- a/book/labs/lab_01.ipynb
+++ b/book/labs/lab_01.ipynb
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "c01bb8db-ab23-4cc8-a128-8edb48bae49d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d86e6ab746ca4722b6f41029042cb509",
+       "model_id": "3867c8b998014e05899a63221bd1eecc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -51,7 +51,7 @@
        "Map(center=[20, 0], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_text…"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
    "source": [
     "import leafmap\n",
     "\n",
-    "# Creat an interactive map\n",
+    "# Create an interactive map\n",
     "m = leafmap.Map(center=[20, 0], zoom=2, height='600px')\n",
     "# Add basemap\n",
     "m.add_basemap(\"CartoDB.DarkMatter\")\n",
@@ -67,8 +67,8 @@
     "text = \"Made by Camilo Jose Viera Iglesias\"\n",
     "m.add_text(text, fontsize=20, position='bottomright')\n",
     "# Add a logo to the map\n",
-    "logo = 'https://raw.githubusercontent.com/opengeos/leafmap/master/docs/assets/logo_rect.png'\n",
-    "m.add_image(logo, position='bottomright', width=300)\n",
+    "logo = 'https://github.com/opengeos/leafmap/blob/master/docs/assets/logo.png?raw=true'\n",
+    "m.add_image(logo, position='bottomright', width=100, height=100)\n",
     "# Add GeoJSON data to the map\n",
     "cables = 'https://open.gishub.org/data/vector/cables.geojson'\n",
     "callback = lambda feat: {\"color\": feat[\"properties\"][\"color\"], \"weight\": 1}\n",
