--- a/book/labs/lab_02.ipynb
+++ b/book/labs/lab_02.ipynb
@@ -21,11 +21,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "6b7b073a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "92b40a248a864232922908813768e4d4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[20, 0], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_text…"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Add your code here..."
+    "import leafmap\n",
+    "\n",
+    "# Create an interactive map\n",
+    "m = leafmap.Map(center=[20, 0], zoom=2, height='600px')\n",
+    "# Add basemap\n",
+    "m.add_basemap(\"Esri.WorldImagery\")\n",
+    "# Define the 'text' variable\n",
+    "text = \"Made by Camilo Jose Viera Iglesias\"\n",
+    "# Add text to the map\n",
+    "m.add_text(text, fontsize=20, position='bottomright')\n",
+    "# Add a logo to the map\n",
+    "logo = 'https://github.com/gee-community/geemap/blob/master/docs/assets/logo.png?raw=true'\n",
+    "m.add_image(logo, position='bottomright', width=100, height=100)\n",
+    "# Add GeoJSON data to the map\n",
+    "cables = 'https://open.gishub.org/data/vector/cables.geojson'\n",
+    "callback = lambda feat: {\"color\": feat[\"properties\"][\"color\"], \"weight\": 1}\n",
+    "m.add_geojson(cables, layer_name=\"Cable lines\", style_callback=callback)\n",
+    "# Display the map\n",
+    "m"
    ]
   },
   {
@@ -52,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
